[package]
name = "tiny_url"
version = "0.1.0"
edition = "2021"
description = "Demo of actix-web, sqlx with postgres"
keywords = [
    "actix-web",
    "sqlx",
    "postgres",
    "chrono",
    "serde",
    "nanoid",
    "url",
    "bruno",
    "figment",
]
authors = ["David Skyberg <davidskyberg@gmail.com"]
license = "MIT"

[dependencies]
actix-web = "4.4.0"
async-trait = "0.1.74"
chrono = { version = "0.4.31", features = ["serde"] }
convert_case = "0.6.0"
dotenv = "0.15.0"
dyn-clone = "1.0.16"
env_logger = "0.10.0"
figment = { version = "0.10.12", features = ["env", "toml", "test"] }
log = "0.4.20"
nanoid = "0.4.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "postgres", "chrono"] }
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full", "tracing"] }
utoipa = { version = "4.1.0", features = ["actix_extras"] }
utoipa-rapidoc = { version = "1.0.0", features = ["actix-web"] }
utoipa-redoc = { version = "1.0.0", features = ["actix-web"] }
utoipa-swagger-ui = { version = "4.0.0", features = ["actix-web"] }
validator = { version = "0.16.1", features = ["derive"] }
